# MLOps

./: .gitignore  Makefile  README.md  Untitled-1.ipynb  checkpoint.pth  data.dvc  data.py  main.py  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
data/processed/: normalized_test_y.pt  normalized_train_y.pt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_dtu/: __init__.py  predict_model.py  train_model.py
mlops_dtu/data/: make_dataset.py
mlops_dtu/models/: model.py
mlops_dtu/visualizations/: visualize.py
mlops_dtu_2024/: __init__.py
mlops_dtu_2024/models/: model.py
models/trained/: checkpoint.pth
